--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" xmlns:th="http://www.thymeleaf.org">
+<html lang="es">
     <head>
 
 <meta http-equiv="Content-Type" content="text/html"; charset="UTF-8">
@@ -13,7 +13,7 @@
 <style>
   .bd-placeholder-img {
     font-size: 1.125rem;
-    text-anchor: middle; 
+    text-anchor: middle;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -30,18 +30,27 @@
 <link rel="stylesheet" href="estilos.css">
     </head>
     <body>
-      <p th:text="'Hello, ' + ${name} + '!'" />
       <header>
         <nav class="navbar navbar-expand-lg navbar-light " style="background-color: beige;" >
           <img src="imagenes/icono.jpeg" width="50px" height="50px"> 
-          <a class="navbar-brand" href="principal.html" >BestPlaces</a>
+          <a class="navbar-brand" href="/" >BestPlaces</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="sobrenosotros.html">Sobre Nosotros<span class="sr-only"></span></a>
+                  <a class="nav-link" href="sobrenosotros">Sobre Nosotros<span class="sr-only"></span></a>
+                </li>
+              </ul>
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link" href="nuestragente">Nuestra Gente<span class="sr-only"></span></a>
+                </li>
+              </ul>
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link" href="razones">10 Razones<span class="sr-only"></span></a>
                 </li>
               </ul>
             </div>
@@ -59,34 +68,32 @@
      <p></p>
      <p></p>  
       
-        <!-- Marketing messaging and featurettes
-        ================================================== -->
-        <!-- Wrap the rest of the page in another container to center all the content. -->
+       
       
         <div class="container marketing">
       
-          <!-- Three columns of text below the carousel -->
+          
           <div class="row">
             <div class="col-lg-4">
               <img  src="imagenes/merengue.jpeg">
               <h2>Merengue</h2>
               <p> Es un estilo de baile y música caribeña en tiempos 2/4.</p>
              
-            </div><!-- /.col-lg-4 -->
+            </div>
             <div class="col-lg-4">
               
               <img src="imagenes/gastronomia.jpeg">
               <h2>Gastronomia</h2>
               <p> Es el resultado de una mezcla de sincretismo étnico-cultural indígena, español y africano. Presenta las características de una cocina criolla.</p>
               
-            </div><!-- /.col-lg-4 -->
+            </div>
             <div class="col-lg-4">
               <img src="imagenes/bachata.jpeg">
               <h2>Bachata</h2>
               <p>Es un género musical bailable que nace en la República Dominicana a principio de los años 60.</p>
               
-            </div><!-- /.col-lg-4 -->
-          </div><!-- /.row -->
+            </div>
+          </div>
       
       
          
@@ -96,7 +103,7 @@
           <p></p>
           <p></p>
           
-          <!-- <div class="row featurette">
+          <div class="row featurette">
             <div class="col-md-7">
               <h2 class="featurette-heading">Zona Colonial</h2>
               <p class="lead">Es justo el lugar donde empezó la historia del Nuevo Mundo. Se encuentra ubicada del lado oriental de la desembocadura del río Ozama. Fue fundada por Bartolomé Colón el 5 de agosto de 1496 y trasladada luego al lado occidental en 1502 por Nicolás de Ovando. Es uno de los lugares más visitados por los turistas.</p>
@@ -107,20 +114,7 @@
             </div>
           </div>
       
-          <hr class="featurette-divider"> -->
-
-          <th:block th:each="sitio : ${sitios}">
-            <div class="row featurette">
-              <div class="col-md-7">
-                <h2 class="featurette-heading" th:text="${sitio.title}"></h2>
-                <p class="lead" th:text="${sitio.paragraph}"></p>
-              </div>
-              <div class="col-md-5">
-                <img src="@{/resources/bachata.jpeg}" height="350px" width="350px">
-              </div>
-            </div>
-            <hr class="featurette-divider">
-          </th:block>
+          <hr class="featurette-divider">
       
           <div class="row featurette">
             <div class="col-md-7 order-md-2">
@@ -171,7 +165,7 @@
 
           <hr class="featurette-divider">
       
-        </div><!-- /.container -->
+        </div>
           <footer> &#169 CopyRight 2020  Shantal Suero, Miguel A. Peña, Ezequiel Pérez. Todos los Derechos reservados. ITLA</footer>
     </body>
 </html>
