--- a/src/main/resources/templates/sobrenosotros.html
+++ b/src/main/resources/templates/sobrenosotros.html
@@ -1,65 +1,84 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
 
-<meta http-equiv="Content-Type" content="text/html"; charset="UTF-8">
-<meta name="viewport" content="width= device-width, initial-scale=0.1">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>BestPlaces</title>
+<head>
 
-
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-<link rel="stylesheet" href="estilos.css">
+  <meta http-equiv="Content-Type" content="text/html" ; charset="UTF-8">
+  <meta name="viewport" content="width= device-width, initial-scale=0.1">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>BestPlaces</title>
 
 
-    </head>
-    <body>
-        <nav class="navbar navbar-expand-lg navbar-light " style="background-color: beige;" >
-          <img src="imagenes/icono.jpeg" width="50px" height="50px"> 
-            <a class="navbar-brand" href="principal.html" >BestPlaces</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item active">
-                  <a class="nav-link" href="sobrenosotros.html">Sobre Nosotros<span class="sr-only"></span></a>
-                </li>
-              </ul>
-            </div>
-          </nav>
-<p></p>
-<p></p>
-<p></p>
-          <h1>Sobre nosotros</h1>
- <p></p>
- <p></p>
- <p></p>         
- <center>
-          <img src="imagenes/rd.jpeg"  height="200px">
-        
-          <img src="imagenes/dominicana-03.gif" width="200px" height="200px">
-          <img src="imagenes/personas.jpeg"  height="200px">
-        </center>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="estilos.css">
 
-        <p></p>
- <p></p>
- <p></p> 
-        <p>"Somos una pequeña comunidad en la cual nos dedicamos a ofrecer a nuestros extranjeros/as y dominicanos/as sugerencias de lugares incréibles que tienen que visitar cuando esten en nuestro país, la hermosa República Dominicana"</p>
-        <p></p>
-        <p></p> 
-        <center>
-        <h4>¡No dejes de visitar la hermosa República Dominicana!</h4>
-      </center>
-      
-        
-        
-        
-        
-        
-        
-        
-        
-        <footer> &#169 CopyRight 2020  Shantal Suero, Miguel A. Peña, Ezequiel Pérez. Todos los Derechos reservados. ITLA</footer>
-    </body>
+
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light " style="background-color: beige;">
+    <img src="imagenes/icono.jpeg" width="50px" height="50px">
+    <a class="navbar-brand" href="/">BestPlaces</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="sobrenosotros">Sobre Nosotros<span class="sr-only"></span></a>
+        </li>
+      </ul>
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="nuestragente">Nuestra Gente<span class="sr-only"></span></a>
+        </li>
+      </ul>
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="razones">10 Razones<span class="sr-only"></span></a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <p></p>
+  <p></p>
+  <p></p>
+  <h1>Sobre nosotros</h1>
+  <p></p>
+  <p></p>
+  <p></p>
+  <center>
+    <img src="imagenes/rd.jpeg" height="200px">
+
+    <img src="imagenes/dominicana-03.gif" width="200px" height="200px">
+    <img src="imagenes/personas.jpeg" height="200px">
+  </center>
+  <div class="container marketing">
+  
+    <p></p>
+    <p></p>
+    <p></p>
+    <p>"Somos una pequeña comunidad en la cual nos dedicamos a ofrecer a nuestros extranjeros/as y dominicanos/as sugerencias de lugares incréibles que tienen que visitar cuando esten en nuestro país, la hermosa República Dominicana"</p>
+    <p></p>
+    <p></p>
+    <center>
+      <h4>¡No dejes de visitar la hermosa República Dominicana!</h4>
+    </center>
+  </div>
+  
+
+
+
+
+
+
+
+
+
+  <footer>
+    &#169 CopyRight 2020 Shantal Suero, Miguel A. Peña, Ezequiel Pérez. Todos los Derechos reservados. ITLA
+  </footer>
+</body>
 </html>
