--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,6 +30,7 @@
 <link rel="stylesheet" href="estilos.css">
     </head>
     <body>
+        <p>hola</p>
       <header>
         <nav class="navbar navbar-expand-lg navbar-light " style="background-color: beige;" >
           <img src="imagenes/icono.jpeg" width="50px" height="50px"> 
