--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -39,6 +39,13 @@
             ></a>
           </li>
         </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="contactanos"
+              >Contactanos<span class="sr-only"></span
+            ></a>
+          </li>
+        </ul>
       </div>
     </nav>
   </header>
