--- a/src/main/resources/templates/razones.html
+++ b/src/main/resources/templates/razones.html
@@ -1,63 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-
-<meta http-equiv="Content-Type" content="text/html"; charset="UTF-8">
-<meta name="viewport" content="width= device-width, initial-scale=0.1">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>BestPlaces</title>
-
-
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-<link rel="stylesheet" href="estilos.css">
-<style>
-  .bd-placeholder-img {
-    font-size: 1.125rem;
-    text-anchor: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-  }
-
-  @media (min-width: 768px) {
-    .bd-placeholder-img-lg {
-      font-size: 3.5rem;
-    }
-  }
-</style>
-
-<link rel="stylesheet" href="estilos.css">
-    </head>
-    <body>
-      <header>
-        <nav class="navbar navbar-expand-lg navbar-light " style="background-color: beige;" >
-          <img src="imagenes/icono.jpeg" width="50px" height="50px"> 
-          <a class="navbar-brand" href="/" >BestPlaces</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item active">
-                  <a class="nav-link" href="sobrenosotros">Sobre Nosotros<span class="sr-only"></span></a>
-                </li>
-              </ul>
-              <ul class="navbar-nav">
-                <li class="nav-item active">
-                  <a class="nav-link" href="nuestragente">Nuestra Gente<span class="sr-only"></span></a>
-                </li>
-              </ul>
-              <ul class="navbar-nav">
-                <li class="nav-item active">
-                  <a class="nav-link" href="razones">10 Razones<span class="sr-only"></span></a>
-                </li>
-              </ul>
-            </div>
-          </nav>
-          
-      </header>
-      <body>
+  <div th:replace="layouts/styles :: head"></div>
+  <body>
+<!-- th replace header -->
+<div th:replace="layouts/header :: header"></div>
+   
        <h1>¿Por qué visitar la República Dominicana?</h1>
           <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
             <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
