--- a/src/main/resources/templates/sobrenosotros.html
+++ b/src/main/resources/templates/sobrenosotros.html
@@ -1,47 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<head>
+  <div th:replace="layouts/styles :: head"></div>
+  <body>
+<!-- th replace header -->
+<div th:replace="layouts/header :: header"></div>
 
-  <meta http-equiv="Content-Type" content="text/html" ; charset="UTF-8">
-  <meta name="viewport" content="width= device-width, initial-scale=0.1">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>BestPlaces</title>
-
-
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <link rel="stylesheet" href="estilos.css">
-
-
-</head>
-
-<body>
-  <nav class="navbar navbar-expand-lg navbar-light " style="background-color: beige;">
-    <img src="imagenes/icono.jpeg" width="50px" height="50px">
-    <a class="navbar-brand" href="/">BestPlaces</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="sobrenosotros">Sobre Nosotros<span class="sr-only"></span></a>
-        </li>
-      </ul>
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="nuestragente">Nuestra Gente<span class="sr-only"></span></a>
-        </li>
-      </ul>
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="razones">10 Razones<span class="sr-only"></span></a>
-        </li>
-      </ul>
-    </div>
-  </nav>
   <p></p>
   <p></p>
   <p></p>
